feat: change TZ to Europe/Berlin

--- a/templates/grocy-docker-compose.yml.j2
+++ b/templates/grocy-docker-compose.yml.j2
@@ -7,7 +7,7 @@ services:
     environment:
       - PUID=1000
       - PGID=1000
-      - TZ=Etc/UTC
+      - TZ=Europe/Berlin
       - GROCY_BASE_URL=https://grocy.felixscherz.me
       - GROCY_CALENDAR_FIRST_DAY_OF_WEEK=1
       - GROCY_CURRENCY=EUR
