--- a/templates/server_wg0.conf.j2
+++ b/templates/server_wg0.conf.j2
@@ -11,3 +11,13 @@ PostDown = iptables -D FORWARD -i %i -j ACCEPT; iptables -t nat -D POSTROUTING -
 [Peer]
 PublicKey = {{ hostvars['server'].pubkey }}
 AllowedIPs = 10.0.0.8
+
+[Peer]
+# slzb
+PublicKey = 7g7yND4KvEs8kadw7hkMhVeQqWgbkhA77AAuiMwPZjU=
+AllowedIPs = 10.0.0.9
+
+[Peer]
+# homeassistant
+PublicKey = iU+82jLBeXf3jyfnjQT5kTiI9+mfZ6NvkBd6KY1Kd14=
+AllowedIPs = 10.0.0.10
