feat: set AllowTcpForwarding to yes

--- a/templates/sshd_config.j2
+++ b/templates/sshd_config.j2
@@ -44,7 +44,7 @@ PrintMotd no
 TCPKeepAlive no
 PermitTunnel no
 AllowAgentForwarding no
-AllowTcpForwarding no
+AllowTcpForwarding yes
 
 # Logging
 SyslogFacility AUTH
