feat: add phone to VPN

--- a/templates/server_wg0.conf.j2
+++ b/templates/server_wg0.conf.j2
@@ -5,8 +5,8 @@ ListenPort = 51820
 PrivateKey = {{ server_privkey }}
 
 MTU = 1200
-PostUp = iptables -A FORWARD -i %i -j ACCEPT; iptables -t nat -A POSTROUTING -o wg0 -j MASQUERADE
-PostDown = iptables -D FORWARD -i %i -j ACCEPT; iptables -t nat -D POSTROUTING -o wg0 -j MASQUERADE
+PostUp = iptables -A FORWARD -i %i -j ACCEPT; iptables -A FORWARD -o %i -j ACCEPT; iptables -t nat -A POSTROUTING -o wg0 -s 10.0.0.0/24 -j RETURN; iptables -t nat -A POSTROUTING -o wg0 -j MASQUERADE
+PostDown = iptables -D FORWARD -i %i -j ACCEPT; iptables -D FORWARD -o %i -j ACCEPT; iptables -t nat -D POSTROUTING -o wg0 -s 10.0.0.0/24 -j RETURN; iptables -t nat -D POSTROUTING -o wg0 -j MASQUERADE
 
 [Peer]
 PublicKey = {{ hostvars['server'].pubkey }}
@@ -21,3 +21,8 @@ AllowedIPs = 10.0.0.9
 # homeassistant
 PublicKey = iU+82jLBeXf3jyfnjQT5kTiI9+mfZ6NvkBd6KY1Kd14=
 AllowedIPs = 10.0.0.10
+
+[Peer]
+# phone
+PublicKey = /SapjOXLgnmImwiV9lOG88AqvIIR/xKHlS8W4Z4lLhg=
+AllowedIPs = 10.0.0.11
