fix: allow root login

--- a/templates/sshd_config.j2
+++ b/templates/sshd_config.j2
@@ -10,7 +10,7 @@ PubkeyAuthentication yes
 AuthorizedKeysFile .ssh/authorized_keys
 
 # Root login
-PermitRootLogin no
+PermitRootLogin yes
 
 # Empty passwords
 PermitEmptyPasswords no
